# FitCheck

./: README.md  env.py  pyproject.toml  setup.py
data/: 1.json  2.json  3.json  4.json  5.json
data/personal/: personal_data.json
fitcheck/controllers/: calculation_graph_controller.py  main_controller.py  pdf_report_controller.py  person_controller.py
fitcheck/models/: evaluation.py  evalution.py  person.py
fitcheck/repositories/: person_repository.py
fitcheck/utils/: calculo.py  csv_manager.py  json_manager.py  personal_manager.py
fitcheck/views/: main.py  main_view.py
