[tool.poetry]
name = "fitcheck"
version = "0.1.0"
description = ""
authors = ["Ruanrodrigues20 <ruan.rodrigues.silvaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
